# noria-luke-demo

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
deploy/docker/noria-mysql/: Dockerfile
deploy/docker/noria-server/: Dockerfile
deploy/k8s/: demo.yaml
deploy/k8s/noria/: Chart.yaml  requirements.yaml  values.yaml
deploy/k8s/noria/templates/: NOTES.txt  _helpers.tpl  service.yaml  statefulset.yaml
src/: main.rs
