[package]
name = "noria-luke-demo"
version = "0.1.0"
authors = ["luke-zhu <luke_zhu@brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
noria = { git = "https://github.com/mit-pdos/noria.git" }
rocket = "0.4.2"
tokio = "0.1.22"
